force-app/main/default/objects/Account_Relationship__c/fields/Account_Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Status__c</fullName>
    <formula>if(End_Date__c&lt;TODAY()||Association_End_Date__c&lt;TODAY()||Contract_End_Date__c&lt;TODAY(),&quot;Inactive&quot;,&quot;Active&quot;)</formula>
    <label>Account Relationship Status</label>
    <type>Text</type>
</CustomField>