force-app/main/default/objects/Account_Relationship__c/fields/Account_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Type__c</fullName>
    <label>Account Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACO to Provider</fullName>
            </value>
            <value>
                <fullName>Provider to  Administrative Organisation</fullName>
            </value>
            <value>
                <fullName>Provider to Management Company</fullName>
            </value>
            <value>
                <fullName>Provider to Service Delivery Organisation</fullName>
            </value>
            <value>
                <fullName>ACO to Intermediary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>