force-app/main/default/objects/Account_Relationship__c/fields/Account_Relationship_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Type_Name__c</fullName>
    <formula>Account_From_Id__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Relationship Type Name</label>
    <type>Text</type>
</CustomField>