force-app/main/default/objects/Account_Relationship__c/fields/Account_Total_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Account_Total_Percentage__c</fullName>
    <label>Account Total Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>