force-app/main/default/objects/Account_Relationship__c/fields/ACO_Status__c.field-meta.xml
<CustomField>
    <fullName>ACO_Status__c</fullName>
    <formula>TEXT(Account_From_Id__r.ACO_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACO Status</label>
    <type>Text</type>
</CustomField>