force-app/main/default/objects/Account_Relationship__c/fields/Child_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Child_Integration_ID__c</fullName>
    <formula>Account_To_Id__r.Integration_ID__c</formula>
    <label>Integration ID</label>
    <type>Text</type>
</CustomField>