force-app/main/default/objects/Account_Relationship__c/fields/Contract_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Execution_Date__c</fullName>
    <description>SDO. CONTRACT_EXECUTION_DATE</description>
    <label>Contract Execution Date</label>
    <type>Date</type>
</CustomField>