force-app/main/default/objects/Account_Relationship__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <formula>Account_To_Id__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Type</label>
    <type>Text</type>
</CustomField>