force-app/main/default/objects/Account_Relationship__c/fields/GPMS_Account_To_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Account_To_Name__c</fullName>
    <formula>Account_To_Id__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account To Name</label>
    <type>Text</type>
</CustomField>