force-app/main/default/objects/Account_Relationship__c/fields/GPMS_SDO_Name__c.field-meta.xml
<CustomField>
    <fullName>GPMS_SDO_Name__c</fullName>
    <description>Record Service Deliver Organisation Name.</description>
    <label>SDO Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>