force-app/main/default/objects/Account_Relationship__c/fields/Incorporation_Status__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Status__c</fullName>
    <formula>TEXT(Account_From_Id__r.Incorporation_Status__c)</formula>
    <label>Incorporation Status</label>
    <type>Text</type>
</CustomField>