force-app/main/default/objects/Account_Relationship__c/fields/Integration_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Id__c</fullName>
    <formula>if(ISBLANK( Oracle_SDO_Contract_ID__c ),Name,&quot;ARL-&quot;+TEXT(Oracle_SDO_Contract_ID__c))</formula>
    <label>Integration Id</label>
    <type>Text</type>
</CustomField>