force-app/main/default/objects/Account_Relationship__c/fields/LegacyModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LegacyModifiedBy__c</fullName>
    <description>Legacy modified by field.</description>
    <label>Legacy Modified By</label>
    <length>100</length>
    <type>Text</type>
</CustomField>