force-app/main/default/objects/Account_Relationship__c/fields/Oracle_SDO_Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_SDO_Contract_ID__c</fullName>
    <description>SDO_CONTRACT_ID</description>
    <externalId>true</externalId>
    <label>Oracle SDO Contract ID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>