force-app/main/default/objects/Account_Relationship__c/fields/Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Owner_Type__c</fullName>
    <description>An organisation type owner</description>
    <label>Owner Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>