force-app/main/default/objects/Account_Relationship__c/fields/Ownership_type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_type__c</fullName>
    <description>Proportion of ownership type of the relationship between an ACO and an ACO</description>
    <label>Ownership type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fully Owned</fullName>
            </value>
            <value>
                <fullName>Partly Owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>