force-app/main/default/objects/Account_Relationship__c/fields/Parent_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Parent_Integration_ID__c</fullName>
    <formula>Account_From_Id__r.Integration_ID__c</formula>
    <label>Account From Integration ID</label>
    <type>Text</type>
</CustomField>