force-app/main/default/objects/Account_Relationship__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <description>Precision, Scale. The percentage of ownership attributed to the owner</description>
    <label>Percentage Owned</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>