force-app/main/default/objects/Account_Relationship__c/fields/Report_Filter_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_Filter_ID__c</fullName>
    <formula>CASESAFEID(Account_From_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Filter ID</label>
    <type>Text</type>
</CustomField>