force-app/main/default/objects/Account_Relationship__c/fields/Roles_and_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>Roles_and_Responsibilities__c</fullName>
    <description>SDO. ROLES_RESPONSIBILITIES</description>
    <label>Roles and Responsibilities</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>