force-app/main/default/objects/Account_Relationship__c/fields/Services_Performed__c.field-meta.xml
<CustomField>
    <fullName>Services_Performed__c</fullName>
    <description>SDO_SERVICES_PERFORMED</description>
    <label>Services Performed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allied Health</fullName>
            </value>
            <value>
                <fullName>Clinical Care</fullName>
            </value>
            <value>
                <fullName>Indoor Maintenance</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Outdoor Maintenance</fullName>
            </value>
            <value>
                <fullName>Personal Care</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>