force-app/main/default/objects/Account_Relationship__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Display the ACO&apos;s State</description>
    <formula>Account_From_Id__r.Provider_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACO State</label>
    <type>Text</type>
</CustomField>