force-app/main/default/objects/Account_Relationship__c/fields/Type_of_Owner__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Owner__c</fullName>
    <formula>&quot;Organisation Owner&quot;</formula>
    <label>Type of Owner</label>
    <type>Text</type>
</CustomField>