force-app/main/default/objects/Account_Relationship__c/fields/Unlink_Comment__c.field-meta.xml
<CustomField>
    <fullName>Unlink_Comment__c</fullName>
    <description>COMMENTS.</description>
    <label>Unlink Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>