force-app/main/default/objects/Account_Relationship__c/fields/Unlink_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unlink_Reason__c</fullName>
    <description>REASON</description>
    <label>Unlink Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>