force-app/main/default/objects/Account_Relationship__c/recordTypes/ACO_to_Account.recordType-meta.xml
<RecordType>
    <fullName>ACO_to_Account</fullName>
    <active>true</active>
    <label>ACO to Account</label>
</RecordType>