force-app/main/default/objects/Account_Relationship__c/recordTypes/ACO_to_Intermediary.recordType-meta.xml
<RecordType>
    <fullName>ACO_to_Intermediary</fullName>
    <active>true</active>
    <label>ACO to Intermediary</label>
</RecordType>