force-app/main/default/objects/Account_Relationship__c/recordTypes/ACO_to_Provider.recordType-meta.xml
<RecordType>
    <fullName>ACO_to_Provider</fullName>
    <active>true</active>
    <label>ACO to Provider</label>
</RecordType>