force-app/main/default/objects/Account_Relationship__c/recordTypes/Organisation_Owner.recordType-meta.xml
<RecordType>
    <fullName>Organisation_Owner</fullName>
    <active>true</active>
    <label>Organisation Owner and Owned</label>
</RecordType>