force-app/main/default/objects/Account_Relationship__c/recordTypes/Provider_to_Administrative_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Provider_to_Administrative_Organisation</fullName>
    <active>true</active>
    <label>Provider to Administrative Organisation</label>
</RecordType>