force-app/main/default/objects/Account_Relationship__c/recordTypes/Provider_to_Intermediary.recordType-meta.xml
<RecordType>
    <fullName>Provider_to_Intermediary</fullName>
    <active>true</active>
    <label>Provider to Intermediary</label>
</RecordType>