force-app/main/default/objects/Account_Relationship__c/recordTypes/Provider_to_Management_Company.recordType-meta.xml
<RecordType>
    <fullName>Provider_to_Management_Company</fullName>
    <active>true</active>
    <label>Provider to Management Company</label>
</RecordType>