force-app/main/default/objects/Account_Relationship__c/recordTypes/Provider_to_Service_Delivery_Organisation.recordType-meta.xml
<RecordType>
    <fullName>Provider_to_Service_Delivery_Organisation</fullName>
    <active>true</active>
    <label>Provider to Service Delivery Organisation</label>
</RecordType>