force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Check_Association_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Check_Association_Start_Date</fullName>
    <active>true</active>
    <description>Can be future dated to no more than 3 months in advance. From 1997</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),Not(ISBLANK(Association_Start_Date__c)),OR(Year(Association_Start_Date__c)&lt;1997,Association_Start_Date__c&gt; ADDMONTHS(TODAY(), 3)))</errorConditionFormula>
    <errorDisplayField>Association_Start_Date__c</errorDisplayField>
    <errorMessage>Can be future dated to no more than 3 months in advance.
From 1997</errorMessage>
</ValidationRule>