force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Check_CHSP_SDO.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Check_CHSP_SDO</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Account_From_Id__r.RecordType.DeveloperName =&quot;Commonwealth_Home_Support_Programme&quot; , RecordType.DeveloperName!=&apos;Provider_to_Service_Delivery_Organisation&apos;)</errorConditionFormula>
    <errorMessage>CHSP can only link to Service Delivery Organisations</errorMessage>
</ValidationRule>