force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Check_Contract_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Check_Contract_End_Date</fullName>
    <active>true</active>
    <description>Can be future dated up to 5 years in advance. From 1997</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),
				AND(Not(ISBLANK(Contract_End_Date__c)),
								OR(Year(Contract_End_Date__c)&lt;1997,
											Contract_End_Date__c&gt; ADDMONTHS(TODAY(), 60),
											Contract_End_Date__c&lt;Contract_Start_Date__c)))</errorConditionFormula>
    <errorDisplayField>Contract_End_Date__c</errorDisplayField>
    <errorMessage>Contract end date cannot be more than 5 years in advance or before 1997</errorMessage>
</ValidationRule>