force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Check_Contract_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Check_Contract_Start_Date</fullName>
    <active>true</active>
    <description>Can be future dated to no more than 3 months in advance. From 1997</description>
    <errorConditionFormula>AND(Not(ISBLANK(Contract_Start_Date__c)),OR(Year(Contract_Start_Date__c)&lt;1997,Contract_Start_Date__c&gt; ADDMONTHS(TODAY(), 3)))</errorConditionFormula>
    <errorDisplayField>Contract_Start_Date__c</errorDisplayField>
    <errorMessage>Contract start date cannot be more than 3 months in advance or before 1997</errorMessage>
</ValidationRule>