force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Check_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Check_End_Date</fullName>
    <active>true</active>
    <description>End Date should be after start date.</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),AND(!ISBLANK(End_Date__c),End_Date__c&lt;Start_Date__c,!ISBLANK(Start_Date__c)))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date should be after start date.</errorMessage>
</ValidationRule>