force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Check_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Check_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>OR(Percentage__c&lt;0.01,
Percentage__c&gt;1,
Percentage__c*100-FLOOR(Percentage__c*100)&lt;&gt;0,
Account_Total_Percentage__c&gt;100)</errorConditionFormula>
    <errorDisplayField>Percentage__c</errorDisplayField>
    <errorMessage>Please enter a whole number between 1 and 100 and ensure Total Percentage Ownership &lt;=100.</errorMessage>
</ValidationRule>