force-app/main/default/objects/Account_Relationship__c/validationRules/AR_Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AR_Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c),AND(OR(RecordType.DeveloperName = &apos;Provider_to_Administrative_Organisation&apos;,RecordType.DeveloperName = &apos;Provider_to_Management_Company&apos;),NOT(ISBLANK(Association_End_Date__c)),ISBLANK(Reason__c)))</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason is mandatory when association is End Dated.</errorMessage>
</ValidationRule>