force-app/main/default/objects/Account_Relationship__c/validationRules/Perm_Provider_to_AO_MC_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_Provider_to_AO_MC_Access</fullName>
    <active>true</active>
    <description>Provider to Administrative Organisation and Provider to Management Company record access</description>
    <errorConditionFormula>AND(
OR(ISNEW(),
NOT(ISNEW()
)),
AND(
OR(
RecordType.DeveloperName = &apos;Provider_to_Administrative_Organisation&apos;,
RecordType.DeveloperName = &apos;Provider_to_Management_Company&apos;),
NOT(
OR(
$Permission.GPMS_System_Administrator,
$Permission.GPMS_NATSIFAC,
$Permission.GPMS_ACQSC_User,
$Permission.System_Administrator
))))</errorConditionFormula>
    <errorMessage>You do not have access to edit this record</errorMessage>
</ValidationRule>